# Tiago-PickAndPlace

./: CMakeLists.txt  README.md  package.xml
action/: manipulation.action
msg/: detection.msg  picking_completed.msg
src/: Node_A.cpp  Node_B.cpp  Node_C.cpp
srv/: picking.srv
